--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 .hidden {
   display: none;
 }
+
+img {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
