--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,149 @@
+/* COMMON */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Noto Sans KR', sans-serif;
+  color: #e0e0e0;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+}
+
+ul, li {
+  list-style: none;
+}
+
+input[type="text"], button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+input[type="text"] {
+  border-bottom: 2px solid #e0e0e0;
+  width: 100%;
+}
+
 .hidden {
   display: none;
 }
 
-img {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
+/* SECTION */
+#wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+h2#clock {
+  font-size: 180px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.login {
+  margin-bottom: 30px;
+}
+
+.login input[type="text"] {
+  font-size: 36px;
+  color: #e0e0e0;
+}
+
+.login input[type="text"]::placeholder {
+  color: #bdbdbd;
+}
+
+.login input[type="submit"] {
+  opacity: 0;
+  pointer-events: none;
+}
+
+h1#greeting {
+  font-size: 36px;
+  font-weight: 400;
+}
+
+.list input[type="text"] {
+  color: #e0e0e0;
+}
+
+.list input[type="text"] {
+  font-size: 22px;
+}
+
+.list input[type="text"]::placeholder {
+  font-size: 22px;
+  color: #e0e0e0;
+}
+
+.list ul#todo-list {
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.list ul#todo-list li {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 1.4em;
+  color: #bdbdbd;
+}
+
+ul#todo-list li button {
+  font-size: 22px;
+  color: #e0e0e0;
+  cursor: pointer;
+  padding-left: 8px;
+}
+
+#quote {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+  font-style: italic;
+  font-size: 12px;
+}
+
+/* 애니메이션 */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+/* 미디어쿼리 */
+@media screen and (max-width: 768px) {
+  body {
+    height: auto;
+  }
+  
+  #wrap {
+    padding: 20px;
+  }
+
+  h2#clock {
+    font-size: 100px;
+  }
+
+  #quote {
+    position: relative;
+    bottom: 0;
+    left: 0;
+  }
 }
