--- a/alone/css/style.css
+++ b/alone/css/style.css
@@ -1,11 +1,15 @@
 /* COMMON */
+* { 
+  padding: 0;
+  margin: 0;
+}
 
 body {
+  height: 100vh;
+  color: #e0e0e0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
-  color: #e0e0e0;
 }
 
 .hidden {
